# gittype

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md  about.hbs  about.toml  add_screen_trait.sh  build.rs  cobertura.xml  codecov.yml  flake.nix  generate_all_ascii_titles  generate_all_ascii_titles.rs  generate_changelog.sh  install.sh  lcov.info  version_cache.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/languages/: lang_ascii.json  lang_dark.json  lang_light.json
assets/themes/: ascii.json  ascii_dark.json  ascii_light.json  aurora.json  blood_oath.json  cyber_void.json  dark.json  dark_original.json  default.json  eclipse.json  glacier.json  inferno.json  lang_ascii.json  light.json  light_original.json  neon_abyss.json  oblivion.json  original.json  runic.json  spectral.json  starforge.json  venom.json
benches/: challenge_generator_bench.rs  source_code_parser_bench.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TEST_CHECKLIST.md  installation.md  playing-guide.md  screen_manager_architecture.md  supported-languages.md  themes.md  usage.md
docs/images/: README.md  banner-source.sh
examples/: README.md  debug_comment.rs  phase3_screen_test.rs  screen_manager_demo.rs  seed_database.rs
examples/seeders/: data.rs  database_seeder.rs  mod.rs
src/: error.rs  lib.rs  logging.rs  main.rs  repo_manager.rs  repository_manager.rs  sharing.rs  signal_handler.rs
src/application/service/: mod.rs  repository_service.rs  session_service.rs
src/cache/: challenge_cache.rs  gzip_storage.rs  mod.rs  trending_cache.rs
src/cli/: args.rs  config.rs  mod.rs  runner.rs
src/cli/commands/: export.rs  game.rs  history.rs  mod.rs  repo.rs  stats.rs  trending.rs
src/cli/views/: mod.rs  repo_list_view.rs  repo_play_view.rs  repo_utils.rs  trending_language_selection_view.rs  trending_repository_selection_view.rs  trending_unified_view.rs  trending_view.rs
src/config/: mod.rs  theme.rs
src/domain/: error.rs  mod.rs
src/domain/events/: domain_events.rs  mod.rs  presentation_events.rs  ui_events.rs
src/domain/models/: challenge.rs  chunk.rs  color_mode.rs  color_scheme.rs  config.rs  countdown.rs  difficulty_level.rs  extraction_options.rs  git_repository.rs  git_repository_ref.rs  language.rs  mod.rs  rank.rs  session.rs  stage.rs  theme.rs  total.rs  version.rs
src/domain/repositories/: challenge_repository.rs  git_repository_repository.rs  mod.rs  session_repository.rs  stage_repository.rs  trending_repository.rs  version_repository.rs
src/domain/services/: analytics_service.rs  config_manager.rs  config_service.rs  context_loader.rs  mod.rs  repository_service.rs  session_manager_service.rs  session_service.rs  stage_builder_service.rs  text_processor.rs  theme_manager.rs  theme_service.rs  typing_core.rs  version_service.rs
src/domain/stores/: challenge_store.rs  mod.rs  repository_store.rs  session_store.rs
src/extractor/: centered_progress.rs  challenge_converter.rs  chunk.rs  code_chunk_extractor.rs  git_info.rs  git_repository_extractor.rs  language.rs  mod.rs  parser.rs  progress.rs  repository_extractor.rs  repository_loader.rs
src/extractor/core/: cache.rs  extractor.rs  mod.rs
src/extractor/models/: chunk.rs  language.rs  mod.rs  options.rs
src/extractor/parsers/: c.rs  cpp.rs  csharp.rs  dart.rs  go.rs  haskell.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
src/game/: ascii_digits.rs  ascii_rank_titles_generated.rs  challenge.rs  comment_parser.rs  context_loader.rs  display.rs  display_optimized.rs  display_ratatui.rs  engine.rs  game_data.rs  mod.rs  rank_messages.rs  screen_manager.rs  screen_transition_manager.rs  session.rs  session_manager.rs  session_tracker.rs  stage_builder.rs  stage_manager.rs  stage_renderer.rs  stage_repository.rs  text_processor.rs  total_tracker.rs  typing_animation.rs  typing_core.rs
src/game/models/: screen.rs
src/game/screens/: analytics_screen.rs  animation_screen.rs  cancel_screen.rs  countdown_screen.rs  details_dialog.rs  exit_summary_screen.rs  failure_screen.rs  help_screen.rs  history_screen.rs  info_dialog.rs  info_dialog_old.rs  loading_screen.rs  mod.rs  panic_screen.rs  records_screen.rs  result_screen.rs  session_detail_screen.rs  session_details_dialog.rs  session_failure_screen.rs  session_summary_screen.rs  session_summary_share_screen.rs  settings_screen.rs  sharing_screen.rs  stage_summary_screen.rs  title_screen.rs  total_summary_screen.rs  (+3 more)
src/infrastructure/: browser.rs  console.rs  logging.rs  mod.rs  repository_manager.rs  terminal.rs
src/models/: challenge.rs  chunk.rs  countdown.rs  git_repository.rs  mod.rs  rank.rs  session.rs  stage.rs  total.rs
src/presentation/: di.rs  mod.rs  sharing.rs  signal_handler.rs
src/scoring/: engine.rs  metrics.rs  mod.rs  rank_calculator.rs  ranking_title.rs
src/storage/: database.rs  history.rs  integration_test.rs  mod.rs
src/ui/: centered_loading.rs  color_mode.rs  color_scheme.rs  colors.rs  display.rs  loading_runner.rs  loading_screen.rs  mod.rs  terminal.rs  theme.rs  theme_manager.rs
src/version/: cache.rs  checker.rs  mod.rs
tests/: ascii_art_coverage_tests.rs  comment_processing_tests.rs  extractor_integration_tests.rs  extractor_unit_tests.rs  game_unit_tests.rs  missing_ascii_art_test.rs  mod.rs  scoring_system_tests.rs
tests/fixtures/: complex_commented_rust.rs  complex_rust_service.rs
tests/helpers/: mod.rs
tests/integration/: ascii_art_coverage_tests.rs  comment_processing_tests.rs  event_flow_tests.rs  indent_treesitter_tests.rs  missing_ascii_art_test.rs  mod.rs  multibyte_typing_core.rs
tests/unit/: error_tests.rs  extractor_unit_tests.rs  game_unit_tests.rs  mod.rs  sharing_tests.rs
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  models.ts  practiceController.ts  practiceDecorations.ts  practiceDocumentProvider.ts  practiceSession.ts  selectionSnippetProvider.ts
(+1174 files in other folders)
