[package]
name = "gittype"
version = "0.5.0"
edition = "2021"
authors = ["unhappychoice"]
description = "A typing practice tool using your own code repositories"
license = "MIT"
repository = "https://github.com/unhappychoice/gittype"
homepage = "https://github.com/unhappychoice/gittype"
documentation = "https://docs.rs/gittype"
keywords = ["typing", "practice", "cli", "git", "code"]
categories = ["command-line-utilities", "games"]
default-run = "gittype"
exclude = [
    "*.png",
    "*.gif",
    "*.jpg",
    "*.jpeg",
    "docs/",
    "examples/",
    "tests/fixtures/",
    ".github/",
]

[[bin]]
name = "gittype"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.0"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-dart = "0.0.4"
crossterm = "0.29"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
anyhow = "1.0"
thiserror = "2.0"
walkdir = "2.0"
glob = "0.3"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4.7"
uuid = { version = "1.0", features = ["v4"] }
rand = { version = "0.9", features = ["std_rng"] }
once_cell = "1.19"
rayon = "1.8"
open = "5.0"
urlencoding = "2.1"
git2 = { version = "0.18", features = ["vendored-openssl"] }
dirs = "6.0"
streaming-iterator = "0.1"
log = "0.4"
log4rs = "1.2"
tempfile = "3.8"

[dev-dependencies]
paste = "1.0"
insta = "1.43"
